PKA-170 Change project name from pika to aiku

--- a/lang/en.json
+++ b/lang/en.json
@@ -17,7 +17,7 @@
     "Streamline your": "Streamline your",
     "Users": "Users",
     "View profile": "View profile",
-    "Welcome to pika": "Welcome to pika",
+    "Welcome to aiku": "Welcome to aiku",
     "Worker Id": "Worker Id",
     "auth.failed": "auth.failed",
     "auth.password": "auth.password",
