--- a/lang/es.json
+++ b/lang/es.json
@@ -17,7 +17,7 @@
     "Streamline your": "",
     "Users": "Usuarios",
     "View profile": "Ver perfil",
-    "Welcome to pika": "Bienvenido a pika",
+    "Welcome to aiku": "Bienvenido a aiku",
     "Worker Id": "",
     "auth.failed": "",
     "auth.password": "",
