tlc transaction files 🧼

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,36 +1,508 @@
 {
+    "API user": "API user",
+    "About": "About",
+    "Account": "Account",
+    "Accounting": "Accounting",
     "Active": "Active",
-    "Blocked": "Blocked",
-    "Create user": "Create user",
+    "Add employee to system users": "Add employee to system users",
+    "Address": "Address",
+    "Adopted": "Adopted",
+    "Agent": "Agent",
+    "Agent/Supplier": "Agent/Supplier",
+    "All": "All",
+    "All products": "All products",
+    "All shops": "All shops",
+    "All warehouses": "All warehouses",
+    "All websites": "All websites",
+    "Appearance": "Appearance",
+    "Auditable ID": "Auditable ID",
+    "Auditable Type": "Auditable Type",
+    "Available": "Available",
+    "Brief description for your profile.": "Brief description for your profile.",
+    "CPNP number": "CPNP number",
+    "CRM": "CRM",
+    "Cancel": "Cancel",
+    "Catalogue": "Catalogue",
+    "Change": "Change",
+    "Code": "Code",
+    "Created by": "Created by",
+    "Customer": "Customer",
+    "Customers": "Customers",
+    "DS": "DS",
     "Dashboard": "Dashboard",
+    "Date & Time": "Date & Time",
+    "Delivery address": "Delivery address",
+    "Departments": "Departments",
+    "Detail": "Detail",
+    "Details": "Details",
+    "Dispatch": "Dispatch",
     "Edit": "Edit",
     "Employee": "Employee",
-    "Employees": "Employees",
-    "Employees index": "Employees index",
     "English": "English",
-    "History": "History",
-    "Homepage": "Homepage",
+    "Event": "Event",
+    "Exit edit": "Exit edit",
+    "Families": "Families",
+    "Forbidden": "Forbidden",
+    "Guest": "Guest",
+    "Hired": "Hired",
+    "History, Notes": "History, Notes",
+    "IP Address": "IP Address",
+    "Index": "Index",
+    "Input your name": "Input your name",
+    "Inventory": "Inventory",
+    "Invoices list": "Invoices list",
+    "Left": "Left",
+    "Locations": "Locations",
     "Log in": "Log in",
+    "Marketing": "Marketing",
+    "Module": "Module",
+    "My Profile": "My Profile",
+    "New Department": "New Department",
+    "New Values": "New Values",
+    "New user created": "New user created",
+    "Not set": "Not set",
+    "Old Values": "Old Values",
+    "Open user menu": "Open user menu",
+    "Order service management": "Order service management",
+    "Orders": "Orders",
+    "Outbox": "Outbox",
+    "Owner": "Owner",
+    "Page Not Found": "Page Not Found",
+    "Password": "Password",
+    "Payment Accounts": "Payment Accounts",
+    "Payment Service Providers": "Payment Service Providers",
+    "Phone": "Phone",
+    "Products": "Products",
+    "Products list": "Products list",
+    "Profile": "Profile",
     "Register": "Register",
-    "Settings": "Settings",
+    "Remember me": "Remember me",
+    "Removed": "Removed",
+    "SKOs ordered": "SKOs ordered",
+    "Save": "Save",
+    "Search": "Search",
+    "Search...": "Search...",
+    "Select Theme": "Select Theme",
+    "Select your country": "Select your country",
+    "Select your currency": "Select your currency",
+    "Select your language": "Select your language",
+    "Server Error": "Server Error",
+    "Service Unavailable": "Service Unavailable",
+    "Shop": "Shop",
+    "Sign in": "Sign in",
+    "Sorry, is impossible to process this page.": "Sorry, is impossible to process this page.",
+    "Sorry, the page you are looking for could not be found.": "Sorry, the page you are looking for could not be found.",
+    "Sorry, we are doing some maintenance. Please check back soon.": "Sorry, we are doing some maintenance. Please check back soon.",
+    "Sorry, you are forbidden from accessing this page.": "Sorry, you are forbidden from accessing this page.",
     "Spanish": "Spanish",
+    "State": "State",
+    "Status": "Status",
+    "Stock categories": "Stock categories",
+    "Stored Items": "Stored Items",
     "Streamline your": "Streamline your",
-    "Users": "Users",
+    "Supplier Product": "Supplier Product",
+    "Suppliers": "Suppliers",
+    "Suspended": "Suspended",
+    "System user": "System user",
+    "Tariff codes / Origin": "Tariff codes / Origin",
+    "This employee is not an user": "This employee is not an user",
+    "This information will be synchronised in all your workspaces.": "This information will be synchronised in all your workspaces.",
+    "This is a dummy data for About": "This is a dummy data for About",
+    "Turn Dark Mode": "Turn Dark Mode",
+    "Type": "Type",
+    "URL": "URL",
+    "Unprocessable request": "Unprocessable request",
+    "User": "User",
+    "User Agent": "User Agent",
+    "Username": "Username",
+    "View notifications": "View notifications",
     "View profile": "View profile",
+    "Visit Logs": "Visit Logs",
+    "Warehouse": "Warehouse",
+    "Warehouse Areas": "Warehouse Areas",
+    "Warehouses": "Warehouses",
+    "Web user": "Web user",
+    "Web users": "Web users",
+    "Webpages": "Webpages",
+    "Website": "Website",
+    "Website dashboard": "Website dashboard",
+    "Websites": "Websites",
     "Welcome to aiku": "Welcome to aiku",
-    "Worker Id": "Worker Id",
+    "Whoops, something went wrong on our servers.": "Whoops, something went wrong on our servers.",
+    "Worker number": "Worker number",
+    "Working": "Working",
+    "Workplaces": "Workplaces",
+    "about": "about",
+    "account": "account",
+    "account number": "account number",
+    "accounting": "accounting",
+    "accounts": "accounts",
+    "adoption": "adoption",
+    "agent": "agent",
+    "agent name": "agent name",
+    "agent's marketplace": "agent's marketplace",
+    "agents": "agents",
+    "agents list": "agents list",
+    "all products": "all products",
+    "all shops": "all shops",
+    "allow on demand": "allow on demand",
+    "amount": "amount",
+    "analytics": "analytics",
+    "appearance": "appearance",
+    "area": "area",
+    "area type": "area type",
+    "attachments": "attachments",
     "auth.failed": "auth.failed",
     "auth.password": "auth.password",
     "auth.throttle": "auth.throttle",
+    "avatar": "avatar",
+    "billing address": "billing address",
+    "calendar": "calendar",
+    "cancel": "cancel",
+    "capacity": "capacity",
+    "catalogue": "catalogue",
+    "catalogue all stores": "catalogue all stores",
+    "categories": "categories",
+    "changelog": "changelog",
+    "choose your theme": "choose your theme",
+    "clicks": "clicks",
+    "clients": "clients",
+    "clocking": "clocking",
+    "clocking machine": "clocking machine",
+    "clocking machines": "clocking machines",
+    "clocking-machines": "clocking-machines",
+    "code": "code",
+    "coming soon": "coming soon",
+    "company": "company",
+    "company name": "company name",
+    "contact": "contact",
+    "contact information": "contact information",
+    "contact name": "contact name",
+    "contact/details": "contact/details",
+    "cooling period between orders (days)": "cooling period between orders (days)",
+    "cost": "cost",
+    "cost/pricing": "cost/pricing",
+    "country": "country",
+    "country of origin": "country of origin",
+    "create marketplace agent": "create marketplace agent",
+    "create supplier delivery": "create supplier delivery",
+    "create supplier purchase order": "create supplier purchase order",
+    "create warehouse": "create warehouse",
+    "creating agent": "creating agent",
+    "creating agent's supplier": "creating agent's supplier",
+    "creating customer": "creating customer",
+    "creating department": "creating department",
+    "creating employee": "creating employee",
+    "creating location": "creating location",
+    "creating order": "creating order",
+    "creating payment": "creating payment",
+    "creating payment account": "creating payment account",
+    "creating product": "creating product",
+    "creating purchase order": "creating purchase order",
+    "creating shop": "creating shop",
+    "creating stock family": "creating stock family",
+    "creating supplier": "creating supplier",
+    "creating supplier deliveries": "creating supplier deliveries",
+    "creating supplier purchase order": "creating supplier purchase order",
+    "creating user": "creating user",
+    "creating warehouse": "creating warehouse",
+    "creating warehouse areas": "creating warehouse areas",
+    "creating workplace": "creating workplace",
+    "credit blockchains": "credit blockchains",
+    "currency": "currency",
+    "customer": "customer",
+    "customer number": "customer number",
+    "customer relationship manager": "customer relationship manager",
+    "customers": "customers",
     "dashboard": "dashboard",
+    "data": "data",
+    "database": "database",
+    "date": "date",
+    "date of birth": "date of birth",
+    "delete": "delete",
+    "delete location": "delete location",
+    "deliveries": "deliveries",
+    "delivery": "delivery",
+    "delivery note": "delivery note",
+    "delivery notes": "delivery notes",
+    "delivery notes list": "delivery notes list",
+    "delivery time (days)": "delivery time (days)",
+    "delivery type": "delivery type",
+    "delivery-notes": "delivery-notes",
+    "delivery_note": "delivery_note",
+    "department": "department",
+    "departments": "departments",
+    "description": "description",
+    "detail": "detail",
+    "dimensions shown in website": "dimensions shown in website",
+    "discontinued parts": "discontinued parts",
+    "discounts": "discounts",
+    "dispatch": "dispatch",
+    "dispatched emails": "dispatched emails",
+    "dispatched emails ": "dispatched emails ",
+    "dropshipping": "dropshipping",
+    "duty rate": "duty rate",
+    "edit marketplace agent": "edit marketplace agent",
+    "edit marketplace supplier": "edit marketplace supplier",
+    "edit shop": "edit shop",
+    "edit warehouse": "edit warehouse",
+    "editing": "editing",
+    "email": "email",
     "employee": "employee",
-    "home": "home",
+    "employees": "employees",
+    "families": "families",
+    "family": "family",
+    "fax": "fax",
+    "flag": "flag",
+    "footer": "footer",
+    "fulfilment": "fulfilment",
+    "group currency amount": "group currency amount",
+    "guest": "guest",
+    "guests": "guests",
+    "hazard identification number": "hazard identification number",
+    "header": "header",
+    "health & safety": "health & safety",
+    "history": "history",
+    "history , notes": "history , notes",
+    "history, notes": "history, notes",
+    "hts us": "hts us",
     "human resources": "human resources",
-    "packing": "packing",
-    "picking": "picking",
+    "id": "id",
+    "images": "images",
+    "include general t&c": "include general t&c",
+    "incoterm": "incoterm",
+    "insights": "insights",
+    "inventory": "inventory",
+    "invoice": "invoice",
+    "invoices": "invoices",
+    "issue": "issue",
+    "issues": "issues",
+    "items": "items",
+    "job positions": "job positions",
+    "label": "label",
+    "language": "language",
+    "last incremental order number": "last incremental order number",
+    "localization": "localization",
+    "location": "location",
+    "locations": "locations",
+    "mail": "mail",
+    "mailroom": "mailroom",
+    "mailroom list": "mailroom list",
+    "mailshot": "mailshot",
+    "mailshots": "mailshots",
+    "mailshots ": "mailshots ",
+    "marketplace agents": "marketplace agents",
+    "marketplace suppliers": "marketplace suppliers",
+    "materials/ingredients": "materials/ingredients",
+    "max volume (m³)": "max volume (m³)",
+    "max weight (kg)": "max weight (kg)",
+    "menu": "menu",
+    "minimum order (EUR)": "minimum order (EUR)",
+    "mobile": "mobile",
+    "my profile": "my profile",
+    "name": "name",
+    "net": "net",
+    "new agent": "new agent",
+    "new clocking machine": "new clocking machine",
+    "new customer": "new customer",
+    "new department": "new department",
+    "new employee": "new employee",
+    "new family": "new family",
+    "new guest": "new guest",
+    "new location": "new location",
+    "new mailshot": "new mailshot",
+    "new order": "new order",
+    "new payment": "new payment",
+    "new payment account": "new payment account",
+    "new product": "new product",
+    "new purchase order": "new purchase order",
+    "new shop": "new shop",
+    "new stock": "new stock",
+    "new stock family": "new stock family",
+    "new supplier": "new supplier",
+    "new supplier delivery": "new supplier delivery",
+    "new supplier purchase order": "new supplier purchase order",
+    "new user": "new user",
+    "new warehouse": "new warehouse",
+    "new warehouse area": "new warehouse area",
+    "new workplace": "new workplace",
+    "no": "no",
+    "notifications to be send next shot": "notifications to be send next shot",
+    "number": "number",
+    "offers": "offers",
+    "operations": "operations",
+    "order": "order",
+    "order list": "order list",
+    "order number format": "order number format",
+    "orders": "orders",
+    "our id in supplier records": "our id in supplier records",
+    "outbox": "outbox",
+    "outbox list": "outbox list",
+    "outboxes": "outboxes",
+    "outboxes ": "outboxes ",
+    "outboxes list": "outboxes list",
+    "owner": "owner",
+    "owner id": "owner id",
+    "owner type": "owner type",
+    "part symbol": "part symbol",
+    "parts": "parts",
+    "password": "password",
+    "payment": "payment",
+    "payment account": "payment account",
+    "payment accounts": "payment accounts",
+    "payment service provider": "payment service provider",
+    "payment terms": "payment terms",
+    "payments": "payments",
+    "payments ": "payments ",
+    "payments list": "payments list",
+    "percentage extra cost": "percentage extra cost",
+    "personal information": "personal information",
+    "phone": "phone",
+    "photo": "photo",
+    "picking group": "picking group",
+    "picking pipelines": "picking pipelines",
+    "pool options": "pool options",
+    "port of export": "port of export",
+    "port of import": "port of import",
+    "portfolio": "portfolio",
+    "position": "position",
+    "positions": "positions",
+    "price": "price",
+    "procurement": "procurement",
+    "product": "product",
+    "product families": "product families",
+    "production": "production",
+    "products": "products",
+    "products origin country code": "products origin country code",
+    "profile": "profile",
+    "proper shipping name": "proper shipping name",
+    "properties": "properties",
+    "properties/operation": "properties/operation",
+    "properties/operations": "properties/operations",
+    "prospects": "prospects",
+    "providers": "providers",
+    "purchase order": "purchase order",
+    "purchase order settings": "purchase order settings",
+    "purchase orders": "purchase orders",
+    "purchaseOrder": "purchaseOrder",
+    "purchases/sales": "purchases/sales",
+    "quantity": "quantity",
+    "raw materials": "raw materials",
+    "reads": "reads",
+    "record": "record",
+    "reference": "reference",
+    "related categories": "related categories",
+    "sales": "sales",
+    "save": "save",
+    "sent emails": "sent emails",
+    "set as raw materials": "set as raw materials",
+    "setting": "setting",
+    "settings": "settings",
+    "shop": "shop",
+    "shops": "shops",
+    "showcase": "showcase",
+    "sko barcode (stock control)": "sko barcode (stock control)",
+    "sko description (for picking aid)": "sko description (for picking aid)",
+    "sko description note": "sko description note",
+    "sko dimensions": "sko dimensions",
+    "sko per selling outer (recommended)": "sko per selling outer (recommended)",
+    "sko weight": "sko weight",
+    "slug": "slug",
+    "state": "state",
+    "stats": "stats",
+    "status": "status",
+    "status/Id": "status/Id",
+    "stock": "stock",
+    "stock family": "stock family",
+    "stock history": "stock history",
+    "stock keeping outer (SKO)": "stock keeping outer (SKO)",
+    "stock movements": "stock movements",
+    "stock's families": "stock's families",
+    "stock's family": "stock's family",
+    "stocks": "stocks",
+    "stocks family list": "stocks family list",
+    "stocks list": "stocks list",
+    "stored items": "stored items",
+    "subcategories": "subcategories",
+    "subtype": "subtype",
+    "supplier": "supplier",
+    "supplier deliveries": "supplier deliveries",
+    "supplier delivery": "supplier delivery",
+    "supplier product": "supplier product",
+    "supplier product marketplaces": "supplier product marketplaces",
+    "supplier product's marketplaces ": "supplier product's marketplaces ",
+    "supplier products": "supplier products",
+    "supplier products marketplaces": "supplier products marketplaces",
+    "supplier purchase order": "supplier purchase order",
+    "supplier purchase orders": "supplier purchase orders",
+    "supplier's marketplace": "supplier's marketplace",
+    "supplier's products settings": "supplier's products settings",
+    "supplierProduct": "supplierProduct",
+    "supplier_products": "supplier_products",
+    "suppliers": "suppliers",
+    "sysadmin": "sysadmin",
+    "system administration": "system administration",
+    "system settings": "system settings",
+    "system user": "system user",
+    "system/users": "system/users",
+    "t&c": "t&c",
+    "tariff code": "tariff code",
+    "telephone": "telephone",
+    "telephones": "telephones",
+    "temporal worker": "temporal worker",
+    "tenant currency amount": "tenant currency amount",
+    "terms and conditions": "terms and conditions",
+    "time sheets": "time sheets",
+    "timezone": "timezone",
+    "today time sheets": "today time sheets",
+    "total": "total",
+    "turn dark mode": "turn dark mode",
+    "type": "type",
+    "ufi (poisons centres)": "ufi (poisons centres)",
+    "un class": "un class",
+    "un number": "un number",
+    "unit": "unit",
+    "unit barcode (EAN-13)": "unit barcode (EAN-13)",
+    "unit cost": "unit cost",
+    "unit description": "unit description",
+    "unit expense": "unit expense",
+    "unit label": "unit label",
+    "unit price": "unit price",
+    "unit quantity": "unit quantity",
+    "unit recommended price": "unit recommended price",
+    "unit recommended rpp": "unit recommended rpp",
+    "units": "units",
+    "units per sko": "units per sko",
     "user": "user",
+    "user photo or icon": "user photo or icon",
+    "username": "username",
     "username no set": "username no set",
     "users": "users",
-    "users' list": "users' list",
-    "warehouse operations": "warehouse operations"
+    "users requests": "users requests",
+    "variations": "variations",
+    "volunteer": "volunteer",
+    "vouchers": "vouchers",
+    "waiting times": "waiting times",
+    "warehouse": "warehouse",
+    "warehouse area": "warehouse area",
+    "warehouse areas": "warehouse areas",
+    "warehouse operations": "warehouse operations",
+    "warehouses": "warehouses",
+    "warehouses areas": "warehouses areas",
+    "web user": "web user",
+    "web users": "web users",
+    "web users list": "web users list",
+    "webpage variant": "webpage variant",
+    "webpages": "webpages",
+    "website": "website",
+    "website dashboard": "website dashboard",
+    "websites": "websites",
+    "websites dashboard": "websites dashboard",
+    "weight show in website": "weight show in website",
+    "work experience": "work experience",
+    "working place": "working place",
+    "working places": "working places",
+    "workplace": "workplace",
+    "workshop": "workshop",
+    "yes": "yes"
 }
