--- a/lang/en.json
+++ b/lang/en.json
@@ -8,7 +8,7 @@
     "Address": "Address",
     "Adopted": "Adopted",
     "Agent": "Agent",
-    "Agent/Supplier": "Agent/Supplier",
+    "Agent\/Supplier": "Agent\/Supplier",
     "All": "All",
     "All products": "All products",
     "All shops": "All shops",
@@ -104,7 +104,7 @@
     "Suppliers": "Suppliers",
     "Suspended": "Suspended",
     "System user": "System user",
-    "Tariff codes / Origin": "Tariff codes / Origin",
+    "Tariff codes \/ Origin": "Tariff codes \/ Origin",
     "This employee is not an user": "This employee is not an user",
     "This information will be synchronised in all your workspaces.": "This information will be synchronised in all your workspaces.",
     "This is a dummy data for About": "This is a dummy data for About",
@@ -178,10 +178,10 @@
     "contact": "contact",
     "contact information": "contact information",
     "contact name": "contact name",
-    "contact/details": "contact/details",
+    "contact\/details": "contact\/details",
     "cooling period between orders (days)": "cooling period between orders (days)",
     "cost": "cost",
-    "cost/pricing": "cost/pricing",
+    "cost\/pricing": "cost\/pricing",
     "country": "country",
     "country of origin": "country of origin",
     "create marketplace agent": "create marketplace agent",
@@ -239,7 +239,7 @@
     "discounts": "discounts",
     "dispatch": "dispatch",
     "dispatched emails": "dispatched emails",
-    "dispatched emails ": "dispatched emails ",
+    "dispatched emails ": "dispatched emails",
     "dropshipping": "dropshipping",
     "duty rate": "duty rate",
     "edit marketplace agent": "edit marketplace agent",
@@ -290,10 +290,10 @@
     "mailroom list": "mailroom list",
     "mailshot": "mailshot",
     "mailshots": "mailshots",
-    "mailshots ": "mailshots ",
+    "mailshots ": "mailshots",
     "marketplace agents": "marketplace agents",
     "marketplace suppliers": "marketplace suppliers",
-    "materials/ingredients": "materials/ingredients",
+    "materials\/ingredients": "materials\/ingredients",
     "max volume (m³)": "max volume (m³)",
     "max weight (kg)": "max weight (kg)",
     "menu": "menu",
@@ -339,7 +339,7 @@
     "outbox": "outbox",
     "outbox list": "outbox list",
     "outboxes": "outboxes",
-    "outboxes ": "outboxes ",
+    "outboxes ": "outboxes",
     "outboxes list": "outboxes list",
     "owner": "owner",
     "owner id": "owner id",
@@ -353,7 +353,7 @@
     "payment service provider": "payment service provider",
     "payment terms": "payment terms",
     "payments": "payments",
-    "payments ": "payments ",
+    "payments ": "payments",
     "payments list": "payments list",
     "percentage extra cost": "percentage extra cost",
     "personal information": "personal information",
@@ -377,15 +377,15 @@
     "profile": "profile",
     "proper shipping name": "proper shipping name",
     "properties": "properties",
-    "properties/operation": "properties/operation",
-    "properties/operations": "properties/operations",
+    "properties\/operation": "properties\/operation",
+    "properties\/operations": "properties\/operations",
     "prospects": "prospects",
     "providers": "providers",
     "purchase order": "purchase order",
     "purchase order settings": "purchase order settings",
     "purchase orders": "purchase orders",
     "purchaseOrder": "purchaseOrder",
-    "purchases/sales": "purchases/sales",
+    "purchases\/sales": "purchases\/sales",
     "quantity": "quantity",
     "raw materials": "raw materials",
     "reads": "reads",
@@ -411,7 +411,7 @@
     "state": "state",
     "stats": "stats",
     "status": "status",
-    "status/Id": "status/Id",
+    "status\/Id": "status\/Id",
     "stock": "stock",
     "stock family": "stock family",
     "stock history": "stock history",
@@ -430,7 +430,7 @@
     "supplier delivery": "supplier delivery",
     "supplier product": "supplier product",
     "supplier product marketplaces": "supplier product marketplaces",
-    "supplier product's marketplaces ": "supplier product's marketplaces ",
+    "supplier product's marketplaces ": "supplier product's marketplaces",
     "supplier products": "supplier products",
     "supplier products marketplaces": "supplier products marketplaces",
     "supplier purchase order": "supplier purchase order",
@@ -444,7 +444,7 @@
     "system administration": "system administration",
     "system settings": "system settings",
     "system user": "system user",
-    "system/users": "system/users",
+    "system\/users": "system\/users",
     "t&c": "t&c",
     "tariff code": "tariff code",
     "telephone": "telephone",
@@ -493,16 +493,16 @@
     "web users": "web users",
     "web users list": "web users list",
     "webpage variant": "webpage variant",
-    "webpages": "webpages",
-    "website": "website",
-    "website dashboard": "website dashboard",
-    "websites": "websites",
-    "websites dashboard": "websites dashboard",
-    "weight show in website": "weight show in website",
-    "work experience": "work experience",
-    "working place": "working place",
-    "working places": "working places",
-    "workplace": "workplace",
-    "workshop": "workshop",
-    "yes": "yes"
+    "webpages": "",
+    "website": "",
+    "website dashboard": "",
+    "websites": "",
+    "websites dashboard": "",
+    "weight show in website": "",
+    "work experience": "",
+    "working place": "",
+    "working places": "",
+    "workplace": "",
+    "workshop": "",
+    "yes": ""
 }
