Change i18n to trans(), add dictionary id

--- a/lang/id.json
+++ b/lang/id.json
@@ -504,5 +504,6 @@
     "working places": "tempat kerja",
     "workplace": "tempat kerja",
     "workshop": "bengkel",
-    "yes": "Ya"
+    "yes": "ya",
+    "records": "catatan"
 }
