--- a/lang/en.json
+++ b/lang/en.json
@@ -152,9 +152,9 @@
     "area": "area",
     "area type": "area type",
     "attachments": "attachments",
-    "auth.failed": "auth.failed",
-    "auth.password": "auth.password",
-    "auth.throttle": "auth.throttle",
+    "auth.failed": "These credentials do not match our records.",
+    "auth.password": "The provided password is incorrect.",
+    "auth.throttle": "Too many login attempts. Please try again in :seconds seconds.",
     "avatar": "avatar",
     "billing address": "billing address",
     "calendar": "calendar",
